--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
     text-align: center;
-    color:#218838;
+    color:#006e18;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -65,8 +65,11 @@ button:hover {
     padding-top: 10px;
 }
 
-.history h2 {
+h2 {
     margin: 0;
+    margin-bottom:15px;
+    font-family:Arial, Helvetica, sans-serif;
+    color:#218838;
 }
 
 table {
@@ -87,22 +90,19 @@ th {
     background-color: #f4f4f4;
 }
 p {
-    font-size: 18px;
+    font-size: 16px;
     color: #333;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .info-section {
     margin-top: 20px;
 }
 
-.info-section h2 {
-    text-align: center;
-    color: #333;
-}
-
-.info-section h3 {
+h3 {
     margin-top: 20px;
-    color: #555;
+    color: #006e1c;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .gst-types {
@@ -112,17 +112,17 @@ p {
 }
 
 .gst-type {
-    flex: 1;
-    min-width: 45%;
-    background-color: #f9f9f9;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+    flex: 1 1 28%;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
 }
 
 .gst-type h4 {
     color: #28a745;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 700;
 }
 
 .calculation-steps {
@@ -143,7 +143,7 @@ p {
 }
 
 .output p {
-    font-size: 1.rem;
+    font-size: 1rem;
 }
 
 .calculator .form {
