--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,14 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .container {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 50px auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.9); 
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    text-align: center;
-    color:#006e18;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .calculator {
@@ -28,6 +23,21 @@ h1 {
     margin-bottom: 20px;
 }
 
+h1 {
+    text-align: center;
+    color:#006e18;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 60px;
+}
+
+.subheading {
+    font-size: 1.1em;
+    color: #555;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
 .input-section, .button-section, .output-section {
     margin: 10px 0;
 }
@@ -35,7 +45,7 @@ h1 {
 label {
     display: block;
     margin-bottom: 5px;
-    color: #555;
+    color: #000000;
 }
 
 input, select {
@@ -43,7 +53,7 @@ input, select {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius:5px;
 }
 
 button {
@@ -58,11 +68,6 @@ button {
 
 button:hover {
     background-color: #218838;
-}
-
-.history {
-    border-top: 1px solid #ccc;
-    padding-top: 10px;
 }
 
 h2 {
@@ -87,7 +92,8 @@ th, td {
 }
 
 th {
-    background-color: #f4f4f4;
+    background-color: #28a745;
+    color: white;
 }
 p {
     font-size: 16px;
@@ -96,18 +102,17 @@ p {
 }
 
 .info-section {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 h3 {
-    margin-top: 20px;
     color: #006e1c;
     font-family:Arial, Helvetica, sans-serif;
 }
 
 .gst-types {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
     gap: 20px;
 }
 
@@ -157,7 +162,7 @@ h3 {
     box-sizing: border-box;
     font-size: 16px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 .highlight {
@@ -167,5 +172,5 @@ h3 {
 .table-container {
     max-width: 100%;
     overflow-x: auto; 
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
